<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Add SurfaceView for camera feed background -->
    <SurfaceView
        android:id="@+id/camera_stream_surface_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/stick_button_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_enable_virtual_stick"
                style="@style/main_fragment_btn"
                android:text="@string/btn_enable_virtual_stick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_disable_virtual_stick"
                style="@style/main_fragment_btn"
                android:text="@string/btn_disable_virtual_stick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_enable_virtual_stick" />

            <Button
                android:id="@+id/btn_set_virtual_stick_speed_level"
                style="@style/main_fragment_btn"
                android:text="@string/btn_set_virtual_stick_speed_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_disable_virtual_stick" />

            <Button
                android:id="@+id/btn_take_off"
                style="@style/main_fragment_btn"
                android:text="@string/btn_take_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_set_virtual_stick_speed_level" />

            <Button
                android:id="@+id/btn_landing"
                style="@style/main_fragment_btn"
                android:text="@string/btn_landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_take_off" />

            <Button
                android:id="@+id/btn_use_rc_stick"
                style="@style/main_fragment_btn"
                android:text="@string/btn_use_rc_stick_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_landing" />


            <Button
                android:id="@+id/btn_enable_virtual_stick_advanced_mode"
                style="@style/main_fragment_btn"
                android:text="@string/enable_virtual_stick_advanced_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_use_rc_stick" />

            <Button
                android:id="@+id/btn_disable_virtual_stick_advanced_mode"
                style="@style/main_fragment_btn"
                android:text="@string/disable_virtual_stick_advanced_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_enable_virtual_stick_advanced_mode" />

            <Button
                android:id="@+id/btn_set_virtual_stick_advanced_param"
                style="@style/main_fragment_btn"
                android:text="@string/set_virtual_stick_advanced_param"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_disable_virtual_stick_advanced_mode" />

            <Button
                android:id="@+id/btn_send_virtual_stick_advanced_param"
                style="@style/main_fragment_btn"
                android:text="@string/send_virtual_stick_advanced_param"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_set_virtual_stick_advanced_param" />

            <Button
                android:id="@+id/btn_toggle_stream_mode"
                style="@style/main_fragment_btn"
                android:text="Switch to RTSP"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_send_virtual_stick_advanced_param" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/virtual_stick_info_tv"
        android:layout_width="@dimen/uxsdk_500_dp"
        android:layout_height="wrap_content"
        android:maxLines="30"
        android:text="virtual info"
        android:textColor="@color/green"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/device_ip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Device IP: Not Available"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toBottomOf="@id/virtual_stick_info_tv"
        tools:ignore="HardcodedText">
    </TextView>

    <TextView
        android:id="@+id/battery_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Battery Level: --%"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toBottomOf="@id/device_ip_tv"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/remaining_flight_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remaining Flight Time: --"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toBottomOf="@id/battery_level_tv"
        tools:ignore="HardcodedText">
    </TextView>

    <TextView
        android:id="@+id/time_needed_to_go_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Needed to Go Home: --"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toBottomOf="@id/remaining_flight_time_tv"
        tools:ignore="HardcodedText">
    </TextView>

    <TextView
        android:id="@+id/distance_to_home_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance to Home: --"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/stick_button_list"
        app:layout_constraintTop_toBottomOf="@id/time_needed_to_go_home_tv"
        tools:ignore="HardcodedText">
    </TextView>

    <TextView
        android:id="@+id/simulator_state_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="simulator state info:"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage">
    </TextView>

    <!-- Manual Override Indicator & Deactivate Toggle -->
    <CheckBox
        android:id="@+id/cb_manual_override"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manual"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        android:buttonTint="#FF0000"
        android:checked="false"
        android:enabled="true"
        android:padding="4dp"
        android:background="#33FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simulator_state_info_tv"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/stream_quality_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RTSP stream quality:"
        android:textColor="@color/green"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_manual_override"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/camera_zoom_ratios_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Camera Zoom Ratios: Loading..."
        android:textColor="@color/green"
        android:textSize="12dp"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stream_quality_info_tv"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />


    <dji.v5.ux.core.widget.hsi.HorizontalSituationIndicatorWidget
        android:id="@+id/widget_horizontal_situation_indicator"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stick_button_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>